hphp/test/zend/good/ext/mbstring/tests/mb_stripos_variation2.php.skipif
<?hh
extension_loaded('mbstring') || die('skip');
function_exists('mb_stripos') || die("skip mb_stripos() is not available in this build");
