hphp/test/zend/bad/ext/mbstring/tests/mb_ereg_replace_callback.php.skipif
<?php
extension_loaded('mbstring') or die('skip mbstring not available');
function_exists('mb_ereg_replace_callback') or die("skip mb_ereg_replace_callback() is not available in this build");
?>